@@ -1,3 +1,4 @@
 intranet                = Intranet
 projects                = Progetti
 timesheet               = Timesheet
+timesheet-name          = Timesheet
