@@ -1,3 +1,10 @@
+1.x.x
+------------------
+CHANGES:
+- Timesheet class is now an Innowork Item. (Alex Pagnoni)
+
+
+
 1.1.0 - 2014/01/07 
 ------------------
 NEW FEATURES:
